--- a/plays/templates/plays/partials/sidemenu_burger.html
+++ b/plays/templates/plays/partials/sidemenu_burger.html
@@ -52,28 +52,27 @@
 <div id="mySidenav" class="sidenav d-flex flex-column"><br><Br>
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="icofont-close-circled main-color"></i></a>
     <span>
-    {% for league in leagues %}
-                {% if league|has_season_data:current_season %}
-                    <div class="plays-link"><a href="{% url 'plays:summary' slug=league.slug  %}?season={{ current_season }}"><i class="icofont-arrow-right"></i>{{ league.name }}</a></div>
-                {% endif %}
-            {% endfor %}
-            
-            <div id="accordion1">
-                {% for league_grouped in league_parents %}
-                    <div class="" id="heading{{league_grouped.id}}" style="cursor: pointer;">
-                        <span style="color: #fff;" class="" data-toggle="collapse" data-target="#collapse{{league_grouped.id}}" aria-expanded="true" aria-controls="collapse{{league_grouped.id}}">
-                            <i class="icofont-arrow-down"></i>{{ league_grouped.name }}
-                        </span>
-                    </div>
-                    <div id="collapse{{league_grouped.id}}" class="collapse" aria-labelledby="heading{{league_grouped.id}}" data-parent="#accordion1">
-                        {% for child in league_grouped.league_set.all %}
-                            {% if child|has_season_data:current_season %}
-                                <div class="plays-sub-link"><a href="{% url 'plays:summary' slug=child.slug  %}?season={{ current_season }}">{{ child.name }}</a></div>
-                            {% endif %}
-                        {% endfor %}
-                    </div>
+    <div id="accordion1">
+        {% for league in league_filters %}
+            {% if not league.isparent and not league.childs.all %}
+                <div class="plays-link {% if current_league_id == league.id %} link-active {% endif %}"><a href="{% url 'plays:summary' slug=league.slug  %}?season={{ current_season }}"><i class="icofont-arrow-right"></i>{{ league.name }} </a></div>
+            {% else %}
+
+            <div class="" id="heading{{ league.id }}" style="cursor: pointer;">
+                <span style="color: #fff;" class="" data-toggle="collapse" data-target="#collapse{{league.id}}" aria-expanded="true" aria-controls="collapse{{league.id}}">
+                    <i class="icofont-arrow-down"></i>{{ league.name }}
+                </span>
+            </div>
+            <div id="collapse{{ league.id }}" class="collapse" aria-labelledby="heading{{league.id}}" data-parent="#accordion1">
+                {% for child in league.childs.all %}
+                    {% if child|has_season_data:current_season %}
+                        <div class="plays-sub-link {% if current_league_id == child.id %} link-active {% endif %}" ><a href="{% url 'plays:summary' slug=child.slug  %}?season={{ current_season }}">{{ child.name }}</a></div>
+                    {% endif %}
                 {% endfor %}
             </div>
+            {% endif %}
+        {% endfor %}
+    </div>
     </span>
 </div>
 
