--- a/plays/templates/plays/partials/table_games.html
+++ b/plays/templates/plays/partials/table_games.html
@@ -14,7 +14,7 @@
     <tr class="tb-title">
         <td colspan="4">{{ name }}</td>
     </tr>
-    {% for game in data.data %}
+    {% for game in data %}
     <tr>
         <td class="tb-digit">
             <small>{{ game.date }}</small>
