--- a/soccerbase/templates/soccerbase/tables/filters_desktop_players.html
+++ b/soccerbase/templates/soccerbase/tables/filters_desktop_players.html
@@ -12,7 +12,7 @@
     <div class="filter pr-2"> 
         {% include 'soccerbase/tables/filters/filter_league_ms.html' with size=120 %}
     </div>
-    <div class="ilter pr-2"> 
+    <div class="filter pr-2">
         {% include 'soccerbase/tables/filters/filter_vivo_ms.html' with size=120 %}
     </div>
     <div class="filter pr-2"> 
