--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -8,14 +8,14 @@
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="">{% trans 'Bazy' %}</a>
     <div class="dropdown-menu">
         <a class="dropdown-item" href="{% url 'soccerbase:players' %}">{% trans 'Piłkarzy' %}</a>
-        <a class="dropdown-item" href="{% url 'soccerbase:coaches' %}">{% trans 'Trenerów<' %}/a>
+        <a class="dropdown-item" href="{% url 'soccerbase:coaches' %}">{% trans 'Trenerów<' %}</a>
         <a class="dropdown-item" href="{% url 'soccerbase:teams' %}">{% trans 'Klubów' %}</a>
     </div>
 </li>
 <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
 <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty PlayMaker' %}</a></li>
 {% comment %} <li><a href="/products/">Produkty</a></li> {% endcomment %}
-<li class="nav-item"><a class="nav-link" href="/transfer/">{% trans 'Transfer' %}<  /a></li>
+<li class="nav-item"><a class="nav-link" href="/transfer/">{% trans 'Transfer' %}</a></li>
 <li class="nav-item"><a class="nav-link" href="/scouting/">{% trans 'Skauting' %}</a></li>
 {% comment %} <li><a href="/blog">Blog</a></li> {% endcomment %}
 {% comment %} <li><a href="#contact">Kontakt</a></li> {% endcomment %}
