--- a/profiles/templates/profiles/cards/player/card_primary.html
+++ b/profiles/templates/profiles/cards/player/card_primary.html
@@ -9,7 +9,7 @@
     {% with profile=show_user.profile template='platform/tables/two_table.html' %}
         {% include template with key=_('Noga')               value=profile.get_prefered_leg_display|default:'-'  %}
         {% include template with key=_('Pozycja')            value=profile.get_position_raw_display|default:'-'  %}
-        {% include template with key=_('Wiek')               value=profile.birth_date.year|default:'-'|upper           %}
+        {% include template with key=_('Rocznik')               value=profile.birth_date.year|default:'-'|upper           %}
         {% include template with key=_('Obecna drużyna')     value=profile.display_team|default:'-'|upper           %}
         {% include template with key=_('Poziom rozgrywkowy') value=profile.display_league|default:'-'|upper         %}
         {% comment %} {% include template with key=_('Grupa')              value=profile.group|default:'-'|upper              %} {% endcomment %}
