Added filtering the players

--- a/soccerbase/templates/soccerbase/tables/filters/filter_age_max_input.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_age_max_input.html
@@ -1,1 +1,1 @@
-<input class="form-control" style="width:{{ size }}px;" type="number" {% if request.GET.age_max %} value="{{ request.GET.age_max }}" {% endif %} name="age_max" placeholder="wiek do">
+<input class="form-control" style="width:{{ size }}px;" type="number" {% if request.GET.year_max %} value="{{ request.GET.year_max }}" {% endif %} name="year_max" placeholder="Rocznik do">
