--- a/soccerbase/templates/soccerbase/tables/filters/filter_age_min_input.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_age_min_input.html
@@ -1,1 +1,1 @@
-<input class="form-control" style="width:{{ size }}px;" type="number" value="{{ request.GET.age_min }}" name="age_min" placeholder="wiek od">
+<input class="form-control" style="width:{{ size }}px;" type="number" value="{{ request.GET.year_min }}" name="year_min" placeholder="Rocznik od">
