first ticket fixes

--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -8,7 +8,7 @@
     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="">{% trans 'Bazy' %}</a>
     <div class="dropdown-menu">
         <a class="dropdown-item" href="{% url 'soccerbase:players' %}">{% trans 'Piłkarzy' %}</a>
-        <a class="dropdown-item" href="{% url 'soccerbase:coaches' %}">{% trans 'Trenerów<' %}</a>
+        <a class="dropdown-item" href="{% url 'soccerbase:coaches' %}">{% trans 'Trenerów' %}</a>
         <a class="dropdown-item" href="{% url 'soccerbase:teams' %}">{% trans 'Klubów' %}</a>
     </div>
 </li>
