--- a/soccerbase/templates/soccerbase/tables/filters/filter_position_ms.html
+++ b/soccerbase/templates/soccerbase/tables/filters/filter_position_ms.html
@@ -1,23 +1,14 @@
+{% load playmaker %}
+<select name="position" data-width="{{ size }}" title="pozycja" class="selectpicker" data-actions-box="true" multiple data-live-search="true" data-selected-text-format="count > 3">
 
-
-<select name="position" data-width="{{ size }}"  class="selectpicker" multiple title="pozycja">
-    <option value="----">----</option>
-    <option value="Bramkarz">Bramkarz</option>
-    <option value="Obrońca Lewy">Obrońca Lewy</option>
-    <option value="Obrońca Prawy">Obrońca Prawy</option>
-    <option value="Obrońca Środkowy">Obrońca Środkowy</option>
-    <option value="Pomocnik defensywny (6)">Pomocnik defensywny (6)</option>
-    <option value="Pomocnik środkowy (8)">Pomocnik środkowy (8)</option>
-    <option value="Pomocnik ofensywny (10)">Pomocnik ofensywny (10)</option>
-    <option value="Skrzydłowy">Skrzydłowy</option>
-    <option value="Napastnik">Napastnik</option>
-<!--    <option {% if request.GET.position == 'Bramkarz' %} selected {% endif %}value="Bramkarz">Bramkarz</option>-->
-<!--    <option {% if request.GET.position == 'Obrońca Lewy' %} selected {% endif %}value="Obrońca Lewy">Obrońca Lewy</option>-->
-<!--    <option {% if request.GET.position == 'Obrońca Prawy' %} selected {% endif %}value="Obrońca Prawy">Obrońca Prawy</option>-->
-<!--    <option {% if request.GET.position == 'Obrońca Środkowy' %} selected {% endif %}value="Obrońca Środkowy">Obrońca Środkowy</option>-->
-<!--    <option {% if request.GET.position == 'Pomocnik defensywny (6)' %} selected {% endif %}value="Pomocnik defensywny (6)">Pomocnik defensywny (6)</option>-->
-<!--    <option {% if request.GET.position == 'Pomocnik środkowy (8)' %} selected {% endif %}value="Pomocnik środkowy (8)">Pomocnik środkowy (8)</option>-->
-<!--    <option {% if request.GET.position == 'Pomocnik ofensywny (10)' %} selected {% endif %}value="Pomocnik ofensywny (10)">Pomocnik ofensywny (10)</option>-->
-<!--    <option {% if request.GET.position == 'Skrzydłowy' %} selected {% endif %}value="Skrzydłowy">Skrzydłowy</option>-->
-<!--    <option {% if request.GET.position == 'Napastnik' %} selected {% endif %}value="Napastnik">Napastnik</option>-->
+<option {% if "Bramkarz" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Bramkarz</option>
+<option {% if "Obrońca Lewy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Obrońca Lewy</option>
+<option {% if "Obrońca Prawy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Obrońca Prawy</option>
+<option {% if "Obrońca Środkowy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Obrońca Środkowy</option>
+<option {% if "Pomocnik Defensywny (6)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik Defensywny (6)</option>
+<option {% if "Pomocnik Środkowy (8)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik Środkowy (8)</option>
+<option {% if "Pomocnik Ofensywny (10)" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Pomocnik Ofensywny (10)</option>
+<option {% if "Skrzydłowy" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Skrzydłowy</option>
+<option {% if "Napastnik" in request.GET|get_list:"position" %} selected="selected" {% endif %}>Napastnik</option>
+    
 </select>
