--- a/soccerbase/templates/soccerbase/tables/table_players_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_players_card.html
@@ -26,9 +26,8 @@
         <div class="card-header d-md-none">
             <span> 
                 <a href="{{ object.profile.get_permalink }}">
-                    <strong> 
-                        {{ object.first_name|upper}} {{ object.last_name|upper}} {{ object.profile.birth_date.year|default:'' }}
-                        {% if object.profile.birth_date.year %}{% trans 'r.' %} {% endif %}
+                    <strong>
+                        {{ object.first_name|upper}} {{ object.last_name|upper}} {% if object.profile.birth_date.year %}{% trans 'r.' %} {% endif %} {{ object.profile.birth_date.year|default:'' }}
                         {% if object.is_verified %}<i class="text-success icofont-verification-check"></i>{% endif %}
                     </strong>
                 </a>
@@ -62,7 +61,7 @@
                                                             <strong>
                                                             {{ object.get_full_name|upper}}
                                                             {% if object.is_verified %}<i class="text-success icofont-verification-check"></i>{% endif %}
-                                                            {{ object.profile.birth_date.year|default:'-' }}{% if object.profile.age %}{% trans 'r.' %} {% endif %}
+                                                            {% if object.profile.age %}{% trans 'r.' %} {% endif %} {{ object.profile.birth_date.year|default:'-' }}
                                                             </strong>
                                                         </a>
                                                     
