--- a/plays/templates/plays/plays.html
+++ b/plays/templates/plays/plays.html
@@ -41,7 +41,11 @@ td.tb-digit  {
     padding-top:15px;
     padding-bottom:0px;
     margin-bottom:5px;
-    pointer-events: none;
+    //pointer-events: none;
+}
+
+.tb-subtitle:hover { 
+    background-color: #fff;
 }
 
 .tb-subtitle .text {
@@ -94,6 +98,7 @@ tr:hover {
 
 .plays-table {
     border: 1px;
+    padding-top: 3px;
 }
 
 table tr {
