marketplace pierwsza czesc

--- a/marketplace/templates/marketplace/filters.html
+++ b/marketplace/templates/marketplace/filters.html
@@ -2,7 +2,7 @@
 {% load playmaker %}
 {% load i18n %}
 
-<div id="annoucmenet-filters" class="d-none d-md-inline annoucmenet-filters">
+<div id="announcement-filters" class="d-none d-md-inline announcement-filters">
   <div class="container-fluid">
       <form id="filter-form" method="get" class="form-inline d-flex">    
         {% include 'marketplace/_filters.html' with size=120 %}
