--- a/products/templates/products/filters.html
+++ b/products/templates/products/filters.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load playmaker %}
 
-<div id="annoucmenet-filters" class="d-none d-md-inline annoucmenet-filters">
+<div id="announcement-filters" class="d-none d-md-inline announcement-filters">
   <div class="container-fluid">
     <form id="filter-form" method="get" class="form-inline d-flex">            
     
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div style="background-color:#2b2b2b;" id="annoucmenet-filterss" class="p-4 d-md-none fixed-bottom">
+<div style="background-color:#2b2b2b;" id="announcement-filterss" class="p-4 d-md-none fixed-bottom">
     <div class="container-fluid text-center">
         <button id="open-filter-button"  type="button" class="btn-pm" data-toggle="modal" data-target="#filterModal">
         {% trans 'Filtruj wyniki' %}
