--- a/plays/templates/plays/modals/modal_show_game.html
+++ b/plays/templates/plays/modals/modal_show_game.html
@@ -26,6 +26,10 @@
               <a href="" id="md-gm-guest">guest_team_name</a>
             </div>
           </div>
+          <div>
+            <ul id="md-gm-players">
+            </ul>
+          </div>
         </div>
         <div class="modal-footer" style="border-top:0px;">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'Zamknij' %}</button> 
