marketplace - dodawanie ogłoszenia jako piłkarz, wyekstrahowanie wspólnej logiki dla marketplace widoków, stworzenie nowego modelu (PlayerForClubAnnouncement).

--- a/marketplace/templates/marketplace/announcement.html
+++ b/marketplace/templates/marketplace/announcement.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 <!--PIŁKARZ KLUBU-->
-{% if object.creator.declared_role == "P" %}
+{% if object|classname == "PlayerForClubAnnouncement" %}
 {% include 'marketplace/announcement_player_for_club.html' with object=object %}
 
 <!--KLUB PIŁKARZA-->
