hotfix: delete 'capitalize' from the template

--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -53,7 +53,7 @@
                     {% if not player.profile.voivodeship and not player.profile.address %}
                     <h5>-</h5>
                     {% else %}
-                    <h5> {{ object.voivodeship|capitalize }},
+                    <h5> {{ object.voivodeship }},
                         {{ object.address }} +{{ object.practice_distance }}km </h5>
                     {% endif %}
                     Region
