dodanie filtrów do 'player for team'

--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-6 col-md-3 text-center">
 <!--                    <h5>{{ player.profile.soccer_goal|default:'-' }}</h5>-->
-                    <h5> {{ object.looking_for }} </h5>
+                    <h5> {{ object.target_league }} </h5>
                     Cel poszukiwań
                 </div>
 
