--- a/marketplace/templates/marketplace/_filters.html
+++ b/marketplace/templates/marketplace/_filters.html
@@ -11,5 +11,10 @@
     <div class="filter pr-2">
         {% include 'marketplace/filters/filter_leagues.html' with size=size options=filters.league %}
     </div>
+    {% if view_type == "player_for_club" %}
+        {% include 'marketplace/filters/filters_player_for_club.html' with size=size %}
+    {% elif view_type == "club_for_player" %}
+        {% include 'marketplace/filters/filters_club_for_player.html' with size=size %}
+    {% endif %}
 
 {% endwith %}
