--- a/app/templates/platform/buttons/action_script.html
+++ b/app/templates/platform/buttons/action_script.html
@@ -2,9 +2,19 @@
 
 {% if not off %}
 
-  {% with button_attrs=button_attrs button_class=button_class button_text=button_text button_icon=button_icon button_script=button_script button_id=button_id button_text_prefix=button_text_prefix button_text_suffix=button_text_suffix  %}
+  {% with multiple_options=multiple_options button_attrs=button_attrs button_class=button_class button_text=button_text button_icon=button_icon button_script=button_script button_id=button_id button_text_prefix=button_text_prefix button_text_suffix=button_text_suffix  %}
 
-    {% if modals.register.load %}
+    {% if multiple_options %}
+    <div class="dropdown">
+      <button class="btn-request dropdown-toggle" type="button" id="addAnnoucementButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icofont-plus"></i> Dodaj ogłoszenie</button>
+        <div class="dropdown-menu" aria-labelledby="addAnnoucementButton">
+            {% for option in options %}
+        <a class="dropdown-item" href="#" onclick="get_add_announcement_form(event, '', '', '{{ option.flag }}')" data-toggle="modal" data-target="#addAnnouncementModal" data-ann-action-name="{{ option.flag }}">{{ option.friendly_name }}</a>
+            {% endfor %}
+      </div>
+    </div>
+
+    {% elif modals.register.load %}
         <button 
             {{ button_attrs }} 
             {% if button_id %} id="{{ button_id }}" {% endif %}  
